--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDataTemplate.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDataTemplate.xaml
@@ -151,12 +151,12 @@
                         Style="{StaticResource CategoryLozenge}"
                         Text="{Binding Category}"
                         TextColor="White">
-                        <Label.GestureRecognizers>
+                        <!--<Label.GestureRecognizers>
                             <TapGestureRecognizer
                                 Command="{Binding SearchCategoryCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ArticleListViewModelBase}, Mode=FindAncestorBindingContext}}"
                                 CommandParameter="{Binding .}"
                                 NumberOfTapsRequired="1" />
-                        </Label.GestureRecognizers>
+                        </Label.GestureRecognizers>-->
                     </Label>
                 </rv:MaterialFrame>
 
