--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/_Imports.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using WeeklyXamarin.Blazor.Client
 @using WeeklyXamarin.Blazor.Client.Shared
+@using WeeklyXamarin.Blazor.Client.Components
+@using WeeklyXamarin.Core.Models
