--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/css/app.css
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/css/app.css
@@ -30,6 +30,23 @@ a, .btn-link {
     color: red;
 }
 
+.wx-card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    margin: 20px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.wx-container {
+    padding: 20px;
+    padding: 2px 16px;
+    background-color: #ECF0F1;
+}
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
