--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/MainLayout.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@inject Xamarin.Essentials.Interfaces.IConnectivity connectivity
 
 <div class="page">
     <div class="sidebar">
@@ -7,7 +8,7 @@
 
     <div class="main">
         <div class="top-row px-4">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+            <p>@connectivity.NetworkAccess</p>
         </div>
 
         <div class="content px-4">
