Search for blazor and search performance
Fixed is stale bug that would always load index from web
implemented search for blazor
added MatBlazor

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/Card.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/Card.razor
@@ -1,4 +1,4 @@
-﻿<NavLink href="@Url" target="@(OpenInNewTab ? "_blank" : "_self")">
+﻿<NavLink @key="Url" href="@Url" target="@(OpenInNewTab ? "_blank" : "_self")">
 
     <div class="wx-card">
         <img src="@Image" style="width:100%" />
