--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/_Imports.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using WeeklyXamarin.Blazor.Client.Shared
 @using WeeklyXamarin.Blazor.Client.Components
 @using WeeklyXamarin.Core.Models
+@using MatBlazor
