--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/EditionsPage.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/EditionsPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-<h3>Weekly Xamarin Editions</h3>
+<h1>Weekly Xamarin Editions</h1>
 
 @if (ViewModel == null)
 {
@@ -10,11 +10,11 @@ else
 {
     <CollectionView ItemsSource="ViewModel.Editions"
                     TItem="@Edition"                    >
-        <Card Subtitle="@context.Summary"
+        <Card Body="@context.Summary"
                 Url="@($"Edition/{@context.Id}")"
                 Image="https://weeklyxamarin.github.io/website/assets/StoreIcon.png">
             <Title>
-                <h4><b>#@context.Id</b> @context.PublishDate.ToShortDateString()</h4>
+                <h2 class="wx-card-title"><span style="color: var(--SkyBlueLight)">#@context.Id</span> @context.PublishDate.ToString("MMM dd, yyyy")</h2>
             </Title>
         </Card>
     </CollectionView>
