--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/MainLayout.razor.css
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: var(--SkyBlueLight);
 }
 
 .top-row {
