--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/_Imports.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using WeeklyXamarin.Blazor.Client.Components
 @using WeeklyXamarin.Core.Models
 @using MatBlazor
+@using WeeklyXamarin.Core.Helpers
