--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
@@ -1,26 +1,15 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">Weekly Xamarin</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <div class="nav-right">
+        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <span class="oi oi-home" aria-hidden="true"></span> <span class="nav-text">Home</span>
+        </NavLink>
+        <NavLink class="nav-link" href="searchpage">
+            <span class="oi oi-magnifying-glass" aria-hidden="true"></span><span class="nav-text"> Search</span>
+        </NavLink>
+    </div>
 </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="searchpage">
-                <span class="oi oi-plus" aria-hidden="true"></span> Search
-            </NavLink>
-        </li>
-        
-
-    </ul>
-</div>
 
 @code {
     private bool collapseNavMenu = true;
