--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
@@ -4,8 +4,11 @@
         <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
             <span class="oi oi-home" aria-hidden="true"></span> <span class="nav-text">Home</span>
         </NavLink>
-        <NavLink class="nav-link" href="searchpage">
+        <NavLink class="nav-link" href="Search">
             <span class="oi oi-magnifying-glass" aria-hidden="true"></span><span class="nav-text"> Search</span>
+        </NavLink>
+        <NavLink class="nav-link" href="About">
+            <span class="oi oi-heart" aria-hidden="true"></span><span class="nav-text"> About</span>
         </NavLink>
     </div>
 </div>
