--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor.css
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor.css
@@ -12,10 +12,10 @@
 }
 
 .oi {
-    width: 2rem;
     font-size: 1.1rem;
     vertical-align: text-top;
     top: -2px;
+    margin-right: 5px;
 }
 
 .nav-item {
