--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/css/app.css
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/css/app.css
@@ -9,6 +9,39 @@ a, .btn-link {
     color: var(--white);
 }
 
+.link-item {
+    color: black;
+    display: block;
+    font-size: 14pt;
+}
+
+.viewer {
+    margin: 10px 20px;
+}
+
+.contributor {
+    margin: 10px 20px;
+    color: black;
+    display: block;
+    font-size: 14pt;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.flex-collection {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.avatar {
+    width: 70px;
+    margin: 4px;
+}
+
 .nav-link:hover {
     color: var(--white);
 }
