Added Form Button and fixed icons and title

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
@@ -5,10 +5,13 @@
             <span class="oi oi-home" aria-hidden="true"></span> <span class="nav-text">Home</span>
         </NavLink>
         <NavLink class="nav-link" href="Search">
-            <span class="oi oi-magnifying-glass" aria-hidden="true"></span><span class="nav-text"> Search</span>
+            <span class="oi oi-magnifying-glass" aria-hidden="true"></span><span class="nav-text">Search</span>
+        </NavLink>
+        <NavLink class="nav-link" href="Submit">
+            <span class="oi oi-cloud-upload" aria-hidden="true"></span><span class="nav-text">Submit</span>
         </NavLink>
         <NavLink class="nav-link" href="About">
-            <span class="oi oi-heart" aria-hidden="true"></span><span class="nav-text"> About</span>
+            <span class="oi oi-heart" aria-hidden="true"></span><span class="nav-text">About</span>
         </NavLink>
     </div>
 </div>
