Fixed scrolling title disappearing and white text on cards on search page
deleted some junk

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/SearchPage.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/SearchPage.razor
@@ -26,7 +26,7 @@
               Url="@context.Url"
               Image="https://weeklyxamarin.github.io/website/assets/StoreIcon.png">
             <Title>
-                <h4><b>@context.Title</b></h4>
+                <h2 class="wx-card-title">@context.Title</h2>
             </Title>
         </Card>
     </CollectionView>
