Dark Mode and Light Mode and System

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/App.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/App.razor
@@ -1,3 +1,7 @@
+@using MonkeyCache;
+@inject IBarrel Barrel;
+@inject IJSRuntime jSRuntime;
+
 <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -8,3 +12,12 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+@code { 
+    protected override async Task OnInitializedAsync()
+    {
+        await  base.OnInitializedAsync();
+        var storedTheme = Barrel.Get<bool>("is-dark-theme");
+        await jSRuntime.InvokeVoidAsync("switchTheme", storedTheme);
+    }
+}
