Simplify theming by cutting out js to monitor change events

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/ThemeSwitch.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/ThemeSwitch.razor
@@ -2,40 +2,38 @@
 @inject IBarrel Barrel;
 @inject IJSRuntime jSRuntime;
 
-<NavLink class="nav-link" @onclick="@ThemeSwitchChanged">
-    <span title="@($"Change theme")" class="oi @IconClass" aria-hidden="true"></span><span class="nav-text">Theme</span>
-</NavLink>
+<span title="@TitleText" class="oi @IconClass" aria-hidden="true" @onclick="@ThemeSwitchChanged"> Theme</span>
+
 @code {
     string Theme;
     string NextTheme => Theme switch
     {
-        "System" => "Dark",
-        "Dark" => "Light",
-        "Light" => "System"
+        "system" => "dark",
+        "dark" => "light",
+        "light" => "system",
+        _ => "dark"
     };
 
     string IconClass => NextTheme switch
     {
-        "System" => "oi-cloudy",
-        "Dark" => "oi-moon",
-        "Light" => "oi-sun"
+        "system" => "oi-cloudy",
+        "dark" => "oi-moon",
+        "light" => "oi-sun",
+        _ => "oi-moon"
     };
 
+    string TitleText => $"Change from {Theme ?? "system"} to {NextTheme} theme";
 
     public async Task ThemeSwitchChanged()
     {
         Theme = NextTheme;
-
-        Barrel.Add("theme", Theme, default);
         await jSRuntime.InvokeVoidAsync("switchTheme", Theme);
     }
 
     protected override async Task OnInitializedAsync()
     {
-        await base.OnInitializedAsync();
         Theme = Barrel.Get<string>("theme");
-        Theme = string.IsNullOrWhiteSpace(Theme) ? "System" : Theme;
-        await jSRuntime.InvokeVoidAsync("switchTheme", Theme);
-
+        Theme = string.IsNullOrWhiteSpace(Theme) ? "system" : Theme;
+        await jSRuntime.InvokeVoidAsync("switchTheme");
     }
 }
