--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor.css
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor.css
@@ -11,7 +11,12 @@
     font-size: 1.1rem;
 }
 
-
+.oi {
+    font-size: 1.1rem;
+    vertical-align: text-top;
+    top: -2px;
+    margin-right: 5px;
+}
 
 .nav-item {
     font-size: 0.9rem;
