A few last tweaks

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             <span class="oi oi-heart" aria-hidden="true"></span><span class="nav-text">About</span>
         </NavLink>
         <NavLink class="nav-link">
-            <ThemeSwitch></ThemeSwitch>
+            <ThemeSwitch />
         </NavLink>
         
     </div>
