--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/ThemeSwitch.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/ThemeSwitch.razor
@@ -2,7 +2,7 @@
 @inject IBarrel Barrel;
 @inject IJSRuntime jSRuntime;
 
-<span title="@TitleText" class="oi @IconClass" aria-hidden="true" @onclick="@ThemeSwitchChanged"> Theme</span>
+<span @onclick="@ThemeSwitchChanged"><span title="@TitleText" class="oi @IconClass" aria-hidden="true"></span> Theme</span>
 
 @code {
     string Theme;
@@ -22,7 +22,7 @@
         _ => "oi-moon"
     };
 
-    string TitleText => $"Change from {Theme ?? "system"} to {NextTheme} theme";
+    string TitleText => $"Change from {Theme} to {NextTheme} theme";
 
     public async Task ThemeSwitchChanged()
     {
@@ -32,7 +32,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Theme = Barrel.Get<string>("theme");
+        Theme = Barrel.Get<string>("theme").ToLowerInvariant();
         Theme = string.IsNullOrWhiteSpace(Theme) ? "system" : Theme;
         await jSRuntime.InvokeVoidAsync("switchTheme");
     }
