cleaned up css variables

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/css/themes.css
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/css/themes.css
@@ -14,70 +14,37 @@
     --OrangeLight: #E77E23;
     --BlueLight: #5165A2;
     --white: #ffffff;
-    --card-background: #ffffff;
-    --text: #2B2B2B;
+    --light-card-background: #ffffff;
+    --dark-card-background: #232124;
+    --card-background: var(--light-card-background);
+    --light-text: #2B2B2B;
+    --dark-text: #BEC3C7;
+    --text: var(--light-text);
     --link: var(--text);
-    --background: #ECF0F1;
+    --dark-background: #151515;
+    --light-background: #ECF0F1;
+    --background: var(--light-background);
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-    --SkyBlueLight: #3598DB;
-    --YellowDark: #FFA800;
-    --TealLight: #3A6F81;
-    --PinkLight: #F47CC3;
-    --RedLight: #E84C3D;
-    --PowderBlueDark: #99AAD5;
-    --WatermelonLight: #EF727A;
-    --GreenLight: #2DCC70;
-    --MagentaLight: #9B58B5;
-    --LimeLight: #A5C63B;
-    --OrangeLight: #E77E23;
-    --BlueLight: #5165A2;
-    --card-background: #232124;
-    --white: #ffffff;
-    --text: #BEC3C7;
-    --link: var(--text);
-    --background: #151515;
+        --card-background: var(--dark-card-background);
+        --text: var(--dark-text);
+        --link: var(--text);
+        --background: var(--dark-background);
     }
 }
 
 [data-theme="dark"] {
-    --SkyBlueLight: #3598DB;
-    --YellowDark: #FFA800;
-    --TealLight: #3A6F81;
-    --PinkLight: #F47CC3;
-    --RedLight: #E84C3D;
-    --PowderBlueDark: #99AAD5;
-    --WatermelonLight: #EF727A;
-    --GreenLight: #2DCC70;
-    --MagentaLight: #9B58B5;
-    --LimeLight: #A5C63B;
-    --OrangeLight: #E77E23;
-    --BlueLight: #5165A2;
-    --card-background: #232124;
-    --white: #ffffff;
-    --text: #BEC3C7;
+    --card-background: var(--dark-card-background);
+    --text: var(--dark-text);
     --link: var(--text);
-    --background: #151515;
+    --background: var(--dark-background);
 }
 
 [data-theme="light"] {
-    --SkyBlueLight: #3598DB;
-    --YellowDark: #FFA800;
-    --TealLight: #3A6F81;
-    --PinkLight: #F47CC3;
-    --RedLight: #E84C3D;
-    --PowderBlueDark: #99AAD5;
-    --WatermelonLight: #EF727A;
-    --GreenLight: #2DCC70;
-    --MagentaLight: #9B58B5;
-    --LimeLight: #A5C63B;
-    --OrangeLight: #E77E23;
-    --BlueLight: #5165A2;
-    --white: #ffffff;
-    --card-background: #ffffff;
-    --text: #2B2B2B;
+    --card-background: var(--light-card-background);
+    --text: var(--light-text);
     --link: var(--text);
-    --background: #ECF0F1;
+    --background: var(--light-background);
 }
