Changed css break points so nav looks good on medium devices

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/ThemeSwitch.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/ThemeSwitch.razor
@@ -2,7 +2,10 @@
 @inject IBarrel Barrel;
 @inject IJSRuntime jSRuntime;
 
-<span @onclick="@ThemeSwitchChanged"><span title="@TitleText" class="oi @IconClass" aria-hidden="true"></span> Theme</span>
+<span  @onclick="@ThemeSwitchChanged">
+    <span title="@TitleText" class="oi @IconClass" aria-hidden="true"></span>
+    <span class="nav-text"> Theme</span>
+</span>
 
 @code {
     string Theme;
