--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/AboutPage.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/AboutPage.razor
@@ -2,14 +2,14 @@
 
 <h2>Libraries Used</h2>
 <Frame>
-    <CollectionView ItemsSource="@ViewModel.Libraries">
+    <CollectionView ItemsSource="@ViewModel?.Libraries">
         <a class="link-item" target="_blank" href="@context.Url">@context.Text</a>
     </CollectionView>
 </Frame>
 
 <h2>About</h2>
 <Frame>
-    <CollectionView ItemsSource="@ViewModel.AboutLinks">
+    <CollectionView ItemsSource="@ViewModel?.AboutLinks">
         <a class="link-item" target="_blank" href="@context.Url">@context.Text</a>
     </CollectionView>
 </Frame>
@@ -18,7 +18,7 @@
 <Frame>
     <div class="flex-collection">
 
-        <CollectionView ItemsSource="@ViewModel.Contributors">
+        <CollectionView ItemsSource="@ViewModel?.Contributors">
             <a class="contributor" target="_blank" href="@context.ProfileUrl"> <img class="rounded-circle avatar" src="@context.ImageUrl" /><p >@context.Name</p> </a>
         </CollectionView>
     </div>
@@ -28,7 +28,7 @@
 <Frame>
     <div class="flex-collection">
 
-        <CollectionView ItemsSource="@AcknowledgementsViewModel.Acknowledgements">
+        <CollectionView ItemsSource="@AcknowledgementsViewModel?.Acknowledgements">
             <p class="viewer">@context.Person (@context.Activity)</p>
         </CollectionView>
     </div>
