Use of ! to say we know what we are doing

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/CollectionView.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/CollectionView.razor
@@ -25,7 +25,7 @@ else if (CurrentState == ListState.None)
 
         @foreach (var context in ItemsSource)
         {
-            @ChildContent(context)
+            @ChildContent!(context)
         }
     }
 
