--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/CollectionView.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/CollectionView.razor
@@ -16,7 +16,7 @@ else if (CurrentState == ListState.Empty)
 {
     <h2>@EmptyText</h2>
 
-    <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_ZmXW2S.json" background="transparent" speed="1" style="width: 100%; height: 300px;" loop autoplay></lottie-player>
+    <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_ZmXW2S.json" background="transparent" speed="1" loop autoplay></lottie-player>
 }
 else if (CurrentState == ListState.None)
 {
