--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/Frame.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/Frame.razor
@@ -1,6 +1,6 @@
 ﻿
 <div class="wx-card">
-    <div class="wx-container" style="border: none;">
+    <div class="wx-container">
         @ChildContent
     </div>
 </div>
