--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/ThemeSwitch.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/ThemeSwitch.razor
@@ -2,8 +2,8 @@
 @inject IBarrel Barrel;
 @inject IJSRuntime jSRuntime;
 
-<span  @onclick="@ThemeSwitchChanged">
-    <span title="@TitleText" class="oi @IconClass" aria-hidden="true"></span>
+<span title="@TitleText" @onclick="@ThemeSwitchChanged">
+    <span class="oi @IconClass" aria-hidden="true"></span>
     <span class="nav-text"> Theme</span>
 </span>
 
