--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/EditionsPage.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/EditionsPage.razor
@@ -14,7 +14,7 @@ else
                 Url="@($"Edition/{@context.Id}")"
                 Image="https://weeklyxamarin.github.io/website/assets/StoreIcon.png">
             <Title>
-                <h2 class="wx-card-title"><span style="color: var(--SkyBlueLight)">#@context.Id</span> @context.PublishDate.ToString("MMM dd, yyyy")</h2>
+                <h2 class="wx-card-title"><span>#@context.Id</span> @context.PublishDate.ToString("MMM dd, yyyy")</h2>
             </Title>
         </Card>
     </CollectionView>
