--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/Card.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/Card.razor
@@ -1,14 +1,13 @@
-﻿
-<div class="wx-card">
-    <div class="wx-container" style="border-left-color: var(--@CategoryColor)">
+﻿<div class="wx-card">
+    <div class="wx-container" style="border-left-color: var(--@CategoryColor);">
         <NavLink @key="Url" href="@Url" target="@(OpenInNewTab ? "_blank" : "_self")">
             @Title
         </NavLink>
-        <h3 style="color: var(--@CategoryColor)" >@Subtitle</h3>
+        <h3 style="color: var(--@CategoryColor);" >@Subtitle</h3>
         <p>@Body</p>
         @if(Category != null)
         {
-            <span class="lozenge @CategoryClass" style="background-color: var(--@CategoryColor)">@Category</span>
+            <span class="lozenge @CategoryClass" style="background-color: var(--@CategoryColor);">@Category</span>
         }
     </div>
 </div>
