Cleaner method for showing category colors

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/Card.razor.css
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Components/Card.razor.css
@@ -8,7 +8,16 @@
 }
 
 .lozenge {
+    background-color: var(--category-color);
     color: white;
     padding: 8px;
     border-radius: 8px;
+}
+
+.wx-container {
+     border-left-color: var(--category-color);
+}
+
+h3 {
+    color: var(--category-color);
 }
